# X4-MODS

docs/: HERMES_MODIFICATIONS_LOG.md  forum_getting_started.html  forum_hotkey_api.html  forum_interact_menu_api.html  forum_lua_loader_api.html  forum_lua_modding_resources.html  forum_named_pipes_api.html  forum_simple_menu_api.html  mission_director_guide.html  modding_support_wiki.html
extensions/jp_scriptlibrary/: content.xml  ext_01.cat
extensions/sn_mod_support_apis/: content.xml  python_send_keys.txt  readme.txt  ui.xml
extensions/sn_mod_support_apis/md/: chat_window_api.xml  hotkey_api.xml  interact_menu_api.xml  lua_loader.xml  named_pipes.xml  pipe_server_host.xml  pipe_server_lib.xml  simple_menu_api.xml  simple_menu_options.xml  time_api.xml  userdata.xml
extensions/sn_mod_support_apis/sn_mod_support_apis/: change_log.txt  ext_01.cat  python_time_api.txt
extensions/sn_mod_support_apis/ui/: external_interface.lua  library.lua  lua_loader.lua  text.lua
extensions/sn_mod_support_apis/ui/c_library/: winpipe.lua
extensions/sn_mod_support_apis/ui/chat_window/: interface.lua
extensions/sn_mod_support_apis/ui/hotkey/: interface.lua
extensions/sn_mod_support_apis/ui/interact_menu/: interface.lua
extensions/sn_mod_support_apis/ui/named_pipes/: interface.lua  library.lua  pipes.lua
extensions/sn_mod_support_apis/ui/simple_menu/: interface.lua  library.lua  options_menu.lua  standalone_menu.lua  tables.lua
extensions/sn_mod_support_apis/ui/time/: interface.lua  pipe_time.lua
extensions/sn_mod_support_apis/ui/userdata/: interface.lua
extensions/upb_lua_loader/: content.xml  ext_01.cat  subst_01.cat
extensions/x4_ai_assistant/: content.xml  ui.xml
extensions/x4_ai_assistant/md/: kirill_ai_chat.xml
hermes-config/: SOUL.md  config.yaml  dynamic_prompt_assembler.py
hermes-skills/claude-code-insights/: SKILL.md
hermes-skills/claude-code-insights/references/: communication-style.md  system-reminders.md
hermes-skills/claude-code-insights/templates/: dynamic-prompt-assembly.md  subagent-explore.md  subagent-plan.md  subagent-worker.md
hermes-skills/hermes-core-rules/: SKILL.md
repos/X4-External-App/: .gitignore  design.md  package-lock.json  package.json  server.js
repos/X4-External-App/src/: widgetConfig.js
repos/X4-External-App/src/lang/: en.json  es.json  ru.json
repos/X4Native/: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
repos/X4Native/.github/workflows/: release.yml
repos/X4Native/docs/: ARCHITECTURE.md  EXTENSION_API_DESIGN.md  EXTENSION_GUIDE.md  GAME_API.md  INTERNALS.md  RELEASE.md  SDK_CONTRACT.md  VERSIONING.md
repos/X4Native/docs/rev/: COMPONENT_NAMES.md  COMPONENT_SYSTEM.md  CONSTRUCTION_PLANS.md  EVENT_SYSTEM.md  FACTION_RELATIONS.md  FIXED_STATIONS_AND_ENUMERATION.md  GAME_LOOP.md  GATES_AND_POSITIONS.md  MEMORY.md  NOTIFICATION_SYSTEMS.md  OOS_SIMULATION.md  PLAYER_ENTITY_API.md  PRODUCTION_MODULES.md  RESOURCE_DISCOVERY_RE.md  SCOUTING_ACTIONS.md  SECTOR_RESOURCES.md  STATE_MUTATION.md  SUBSYSTEMS.md  THREADING.md  VISIBILITY.md  WALKABLE_INTERIORS.md
repos/X4Native/examples/class_dump/: CMakeLists.txt  README.md  class_dump.cpp  content.xml  x4native.json
repos/X4Native/examples/entity_inspector/: CMakeLists.txt  content.xml  entity_inspector.cpp  x4native.json
repos/X4Native/examples/event_probe/: CMakeLists.txt  content.xml  event_probe.cpp  x4native.json
repos/X4Native/examples/event_test/: CMakeLists.txt  content.xml  event_test.cpp  x4native.json
repos/X4Native/examples/hello/: CMakeLists.txt  content.xml  hello.cpp  x4native.json
repos/X4Native/examples/hook_test/: CMakeLists.txt  content.xml  hook_test.cpp  x4native.json
repos/X4Native/examples/lua_bridge/: CMakeLists.txt  content.xml  lua_bridge.cpp  x4native.json
repos/X4Native/examples/native_tick/: CMakeLists.txt  content.xml  native_tick.cpp  x4native.json
repos/X4Native/extension/: content.xml.in  ui.xml  x4native_settings.json
repos/X4Native/extension/md/: x4native_main.xml
repos/X4Native/extension/t/: 0001-L044.xml
repos/X4Native/extension/ui/: x4n_game_data.lua  x4native.lua
repos/X4Native/native/version_db/: func_history.json  internal_functions.json  type_changes.json
repos/X4Native/reference/: class_ids.csv  class_matrix.csv  event_layouts.csv  event_type_ids.csv  x4_exports.txt  x4_ffi_raw.txt  x4_ffi_summary.txt  x4_struct_names.txt
repos/X4Native/scripts/: README.md  build_deploy.ps1  build_run.ps1  deploy_examples.ps1  extract_exports.ps1  extract_ffi.ps1  extract_game_files.ps1  generate_class_ids.ps1  generate_event_type_ids.ps1  generate_game_data.ps1  generate_headers.ps1  generate_version_db.ps1  update_references.ps1
repos/X4Native/sdk/: x4_game_class_ids.inc  x4_game_func_list.inc  x4_game_func_table.h  x4_game_offsets.h  x4_game_types.h  x4_internal_func_list.inc  x4_manual_types.h  x4_md_events.h  x4n_container.h  x4n_core.h  x4n_entity.h  x4n_events.h  x4n_galaxy.h  x4n_hooks.h  x4n_log.h  x4n_math.h  x4n_memory.h  x4n_module.h  x4n_plans.h  x4n_resources.h  x4n_rooms.h  x4n_sector.h  x4n_ship.h  x4n_stash.h  x4n_station.h  x4n_visibility.h  x4native.h  x4native_extension.h
repos/X4Native/src/: CMakeLists.txt
repos/X4Native/src/common/: lua_api.cpp  lua_api.h  x4native_defs.h
repos/X4Native/src/core/: core.cpp  event_system.cpp  event_system.h  extension_manager.cpp  extension_manager.h  game_api.cpp  game_api.h  hook_manager.cpp  hook_manager.h  logger.cpp  logger.h  version.cpp  version.h
repos/X4Native/src/proxy/: proxy.cpp
repos/x4-projects/Support/: steam_versions.json
repos/x4-projects/Win_Pipe_API/: Win_Pipe_API.vcxproj
repos/x4-projects/extensions/sn_mod_support_apis/: change_log.md
repos/x4-simpit/: README.md  content.xml
repos/x4-simpit/lua/: Simulated_Cockpit.lua
repos/x4-simpit/lua/modules/: Docked.lua  HeatWarning.lua  Loadout.lua  ReceiveText.lua  ShipTargeted.lua  Status.lua  UnderAttack.lua  Undocked.lua
repos/x4-simpit/md/: simulated_cockpit.xml
ui/addons/ego_detailmonitor/: menu_toplevel.xpl
(+17 files in other folders)
